--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <option value="JPY">日本</option>
     </select>
     <div class="input-wrap">
-      <input type="number" id="amount" placeholder="金額">
+      <input type="number" id="amount" placeholder="金額" value="1">
       <span class="unit">USD</span>
     </div>
   </div>
@@ -30,5 +30,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
